fix some css (scrollbar) add links

--- a/scribe-app/src/App.css
+++ b/scribe-app/src/App.css
@@ -63,8 +63,15 @@ html, body {
 
 }
 
+/* Hide scrollbar for Chrome, Safari and Opera */
+.chat-window::-webkit-scrollbar {
+  display: none;
+}
+
 /* Chat window takes up available space */
 .chat-window {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
   flex: 1;
   display: flex;
   flex-direction: column;
@@ -107,6 +114,15 @@ html, body {
   text-align: left;
 }
 
+.url {
+  word-wrap: break-word;
+  overflow-wrap: break-word;
+  white-space: normal;
+}
+
+.link {
+  color: red;
+}
 
 .chat-messages {
   align-items: flex-start;
